; ModuleID = '/home/carl/AnghaBench/linux/kernel/gcov/extr_fs.c_gcov_seq_next.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/gcov/extr_fs.c_gcov_seq_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }
%struct.gcov_iterator = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.seq_file*, i8*, i32*)* @gcov_seq_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @gcov_seq_next(%struct.seq_file* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.seq_file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.gcov_iterator*, align 8
  store %struct.seq_file* %0, %struct.seq_file** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.gcov_iterator*
  store %struct.gcov_iterator* %10, %struct.gcov_iterator** %8, align 8
  %11 = load %struct.gcov_iterator*, %struct.gcov_iterator** %8, align 8
  %12 = bitcast %struct.gcov_iterator* %11 to i8*
  %13 = call i64 @gcov_iter_next(i8* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %22

16:                                               ; preds = %3
  %17 = load i32*, i32** %7, align 8
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %17, align 4
  %20 = load %struct.gcov_iterator*, %struct.gcov_iterator** %8, align 8
  %21 = bitcast %struct.gcov_iterator* %20 to i8*
  store i8* %21, i8** %4, align 8
  br label %22

22:                                               ; preds = %16, %15
  %23 = load i8*, i8** %4, align 8
  ret i8* %23
}

declare dso_local i64 @gcov_iter_next(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
